Added files via upload

--- a/RocketryWebApp/RocketryWebApp/RocketryWebApp.csproj
+++ b/RocketryWebApp/RocketryWebApp/RocketryWebApp.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="KSP Library">
+      <HintPath>..\..\KSP Library\KSP Library\bin\Debug\KSP Library.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.0.1011, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
