--- a/RocketryWebApp/RocketryWebApp/bin/RocketryWebApp.dll.config
+++ b/RocketryWebApp/RocketryWebApp/bin/RocketryWebApp.dll.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="DBCS"
+         connectionString="data source=.; database=RocketryWebApp; integrated security=SSPI"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -25,5 +30,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
-    <appSettings file="" />
+  <appSettings file="">
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
