--- a/KSP Library/KSP Library/KSP Library.csproj
+++ b/KSP Library/KSP Library/KSP Library.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Rocketry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemElements.cs" />
+    <Compile Include="Systems.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
