--- a/RocketryWebApp/Web.config
+++ b/RocketryWebApp/Web.config
@@ -5,15 +5,35 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Azure"
-         connectionString="Server=tcp:rocketcalculator.database.windows.net,1433;Data Source=rocketcalculator.database.windows.net;Initial Catalog=RocketCalculatorDataBase;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    <!--Azure-->
+    <add name="ActiveConnectionString"
+         connectionString="Server=tcp:rocketcalculator.database.windows.net,1433;
+         Data Source=rocketcalculator.database.windows.net;
+         Initial Catalog=RocketryDataBase;
+         Persist Security Info=False;
+         User ID=;
+         Password=;
+         MultipleActiveResultSets=False;
+         Encrypt=True;
+         TrustServerCertificate=False;
+         Connection Timeout=30;"
          providerName="System.Data.SqlClient"/>
+    <!--Local-->
     <add name="Local"
-         connectionString="data source=.; database=RocketryWebApp; integrated security=SSPI"
+         connectionString="data source=.; 
+         database=RocketryWebApp; 
+         integrated security=SSPI"
          providerName="System.Data.SqlClient"/>
+    <!--Somee-->
     <add name="Somee"
-     connectionString="workstation id=RocketsDataBase.mssql.somee.com;packet size=4096;user id=AveryPratt_SQLLogin_1;pwd=nfsmnclb5m;data source=RocketsDataBase.mssql.somee.com;persist security info=False;initial catalog=RocketsDataBase"
-     providerName="System.Data.SqlClient"/>
+         connectionString="workstation id=RocketsDataBase.mssql.somee.com;
+         packet size=4096;
+         user id=AveryPratt_SQLLogin_1;
+         pwd=nfsmnclb5m;
+         data source=RocketsDataBase.mssql.somee.com;
+         persist security info=False;
+         initial catalog=RocketsDataBase"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <customErrors mode="Off" />
@@ -34,12 +54,6 @@
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
-    <defaultDocument>
-      <files>
-        <clear/>
-        <add value="default.aspx"/>
-      </files>
-    </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
