--- a/RocketryWebApp/Web.config
+++ b/RocketryWebApp/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <!--Azure-->
-    <add name="ActiveConnectionString"
+    <add name="Azure"
          connectionString="Server=tcp:rocketcalculator.database.windows.net,1433;
          Data Source=rocketcalculator.database.windows.net;
          Initial Catalog=RocketryDataBase;
@@ -19,7 +19,7 @@
          Connection Timeout=30;"
          providerName="System.Data.SqlClient"/>
     <!--Local-->
-    <add name="Local"
+    <add name="ActiveConnectionString"
          connectionString="data source=.; 
          database=RocketryWebApp; 
          integrated security=SSPI"
